Fix layout issue on mobile screens

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,6 @@ body {
   padding: 0;
 }
 
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14pt;
@@ -63,6 +62,27 @@ main {
   padding: 2em 25%;
 }
 
+@media all and (max-width: 1200px) {
+  main {
+    padding: 3em 15%;
+  }
+}
+
+@media all and (max-width: 800px) {
+  main {
+    padding: 1em 1em;
+  }
+}
+
+footer {
+  text-align: center;
+  padding: 1em;
+  margin-top: 2em;
+  border-top: 1px solid lighten($background-dark, 4%);
+  font-size: 65%;
+  font-weight: 100;
+}
+
 code {
   padding: 0.2em 0.3em;
   font-size: 12pt;
@@ -112,16 +132,6 @@ blockquote {
     padding: 14px;
     text-decoration: none;
   }
-}
-
-footer {
-  text-align: center;
-  padding: 8px;
-  margin-top: 50px;
-  border-top: 1px solid lighten($background-dark, 4%);
-  width: 100%;
-  font-size: 65%;
-  font-weight: 100;
 }
 
 .avatar {
@@ -176,16 +186,4 @@ footer {
 
 .post-link {
   text-decoration: none;
-}
-
-@media all and (max-width: 1200px) {
-  body {
-    padding: 3em 15%;
-  }
-}
-
-@media all and (max-width: 800px) {
-  body {
-    padding: 1em 1em;
-  }
 }
